Update and rename 2025-04-25-meet-the-pc.md to 2025-04-25-meet-the-2025-pc.md

--- a/_posts/2025-04-25-meet-the-2025-pc.md
+++ b/_posts/2025-04-25-meet-the-2025-pc.md
@@ -1,5 +1,5 @@
 ---
-title: Meet the Program Committee
+title: Meet the 2025 Program Committee
 layout: post-detail
 tag: 2025
 image: assets/img/2025/meet-the-pc.png
