--- a/_posts/2025-08-08-gradle.md
+++ b/_posts/2025-08-08-gradle.md
@@ -16,4 +16,4 @@ At Scala Days, the Gradle team will show how Develocity can help you observe, op
 
 Do not miss their talk, ["Exploring Build Caching: A Practical Overview"](/editions/2025/talks/exploring-build-caching-a-practical) by Martin Duhem.
 
-Come meet our Gold Sponsor Gradle at their booth and connect with Hans Dockter, Gradle’s founder and CEO.
+Come meet our Gold Sponsor Gradle at their booth.
